--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qonsoll/translation",
-  "version": "0.3.9",
+  "version": "0.4.3",
   "scripts": {
     "build": " rollup -c",
     "prepare": "npm run build"
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.14.5",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^20.0.0",
