--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qonsoll/translation",
-  "version": "0.4.3",
+  "version": "0.4.4",
   "scripts": {
     "build": " rollup -c",
     "prepare": "npm run build"
@@ -33,11 +33,11 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
-    "firebase": "^8.8.1",
     "prettier": "^2.0.5",
     "prop-types": "^15.7.2",
     "rollup": "^2.55.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "md5": "^2.3.0"
   }
 }
