--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@qonsoll/translation",
-	"version": "0.4.5",
+	"version": "0.5.0",
 	"scripts": {
 		"build": " rollup -c",
 		"prepare": "npm run build"
@@ -11,7 +11,7 @@
 		"dist"
 	],
 	"peerDependencies": {
-		"firebase": ">= 7.0.0 < 9.x",
+		"firebase": ">= 7.0.0",
 		"react": ">= 16.8.0"
 	},
 	"devDependencies": {
